Update Profile tagline (headline under name)

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -7,8 +7,8 @@ sidebar:
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    tagline: Full Stack Developer
     name: Andre Garrigo
+    tagline: Product Manager & Entrepreneur
     avatar: profile320x320.jpg
     # avatar: profile.png  # Place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
