--- a/_data/data.yml
+++ b/_data/data.yml
@@ -13,7 +13,6 @@ sidebar:
     # avatar: profile.png  # Place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    phone: 012 345 6789
     timezone: America/Cancun Timezone
     citizenship:
     website: blog.webjeda.com #do not add http://
@@ -28,6 +27,7 @@ sidebar:
     codewars:
     goodreads: # Number-Username, e.g. 123456-alandoe
     pdf: http://www.africau.edu/images/default/sample.pdf
+    phone: +1 (305) 842-3333
 
     languages:
       title: Languages
