--- a/_data/data.yml
+++ b/_data/data.yml
@@ -13,7 +13,6 @@ sidebar:
     # avatar: profile.png  # Place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    timezone: America/Cancun Timezone
     website: blog.webjeda.com #do not add http://
     linkedin: alandoe
     xing: alandoe
@@ -27,6 +26,7 @@ sidebar:
     goodreads: # Number-Username, e.g. 123456-alandoe
     pdf: http://www.africau.edu/images/default/sample.pdf
     phone: +1 (305) 842-3333
+    timezone: Eastern Time Zone (ET)
     citizenship: United States
 
     languages:
