--- a/_data/data.yml
+++ b/_data/data.yml
@@ -13,7 +13,6 @@ sidebar:
     # avatar: profile.png  # Place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    website: blog.webjeda.com #do not add http://
     linkedin: alandoe
     xing: alandoe
     github: sharu725
@@ -28,6 +27,7 @@ sidebar:
     phone: +1 (305) 842-3333
     timezone: Eastern Time Zone (ET)
     citizenship: United States
+    website: AndreGarrigo.com # do not add http://
 
     languages:
       title: Languages
