--- a/_data/data.yml
+++ b/_data/data.yml
@@ -14,20 +14,20 @@ sidebar:
 
     # Sidebar links
     linkedin: alandoe
-    xing: alandoe
     github: sharu725
-    telegram: # add your nickname without '@' sign
-    gitlab:
-    bitbucket:
     twitter: '@webjeda'
     stack-overflow: # Number/Username, e.g. 123456/alandoe
-    codewars:
     goodreads: # Number-Username, e.g. 123456-alandoe
     pdf: http://www.africau.edu/images/default/sample.pdf
     phone: +1 (305) 842-3333
     timezone: Eastern Time Zone (ET)
     citizenship: United States
     # website: AndreGarrigo.com # do not add http://
+    # xing: 
+    # telegram: # add your nickname without '@' sign
+    # gitlab:
+    # bitbucket:
+    # codewars:
 
     languages:
       title: Languages
