--- a/_data/data.yml
+++ b/_data/data.yml
@@ -13,7 +13,6 @@ sidebar:
     # avatar: profile.png  # Place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    linkedin: alandoe
     github: sharu725
     twitter: '@webjeda'
     stack-overflow: # Number/Username, e.g. 123456/alandoe
@@ -23,6 +22,7 @@ sidebar:
     timezone: Eastern Time Zone (ET)
     citizenship: United States
     # website: AndreGarrigo.com # do not add http://
+    linkedin: AndreGarrigo
     # xing: 
     # telegram: # add your nickname without '@' sign
     # gitlab:
