--- a/_data/data.yml
+++ b/_data/data.yml
@@ -13,7 +13,6 @@ sidebar:
     # avatar: profile.png  # Place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    twitter: '@webjeda'
     stack-overflow: # Number/Username, e.g. 123456/alandoe
     goodreads: # Number-Username, e.g. 123456-alandoe
     pdf: http://www.africau.edu/images/default/sample.pdf
@@ -27,6 +26,7 @@ sidebar:
     # telegram: # add your nickname without '@' sign
     # gitlab:
     # bitbucket:
+    twitter: '@hello_its_andre'
     # codewars:
 
     languages:
