Update Sidebar INTERESTS in _data/data.yml

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -42,13 +42,13 @@ sidebar:
     interests:
       title: Interests
       info:
-        - item: Climbing
+        - item: Product Lifecycle Management (PLM)
           link:
 
-        - item: Snowboarding
+        - item: Project Management
           link:
 
-        - item: Cooking
+        - item: Product Development
           link:
 
 career-profile:
