Add TechMeme experience to _data/data.yml

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -110,6 +110,25 @@ experiences:
           pellentesque eu, pretium quis, sem.
             - Bullet point
             - Bullet point
+      - role: Senior News Editor
+        time: 2010 - 2012
+        company: TechMeme.com
+        details: |
+          Oversaw the selection of news and information at the core of Techmeme, 
+          a technology news aggregator. Leveraged a combination of industry 
+          contacts, specialist news sources, and Twitter feeds to bring together 
+          the most important tech news from around the web.
+            - Won prestigious TechCrunch Crunchies Award for 
+            &#x2018;Best Bootstrapped Startup&#x2019; (2012).
+            - Evaluated <b>200+</b> technology-related news stories daily. 
+            - Attended and reported on <b>10+</b> tech industry trade shows 
+            including RSA, TechCrunch Disrupt, and WSJ Tech Live.
+            - Quickly identified, assessed and reacted to breaking news stories, 
+            typically posting key stories within <b>minutes</b> of their 
+            availability.
+            - Managed social media accounts; built an audience and a following 
+            that included many influential thought leaders in the tech industry.
+
 # projects:
 #     title: Projects
 #     intro: >
