Update TechMeme experience in _data/data.yml

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -126,8 +126,8 @@ experiences:
           a technology news aggregator. Leveraged a combination of industry 
           contacts, specialist news sources, and Twitter feeds to bring together 
           the most important tech news from around the web.
-            - Won prestigious TechCrunch Crunchies Award for 
-            &#x2018;Best Bootstrapped Startup&#x2019; (2012).
+            - Won prestigious <b>TechCrunch Crunchies Award</b> for &#x2018;Best 
+            Bootstrapped Startup&#x2019; (2012).
             - Evaluated <b>200+</b> technology-related news stories daily. 
             - Attended and reported on <b>10+</b> tech industry trade shows 
             including RSA, TechCrunch Disrupt, and WSJ Tech Live.
