--- a/_data/data.yml
+++ b/_data/data.yml
@@ -89,6 +89,41 @@ experiences:
             - Bullet point
             - Bullet point
       - role: Senior Software Engineer
+      - role: Private Equity Associate
+        time: 2015 - 2017
+        company: Medina Capital Advisors, LLC
+        details: |
+          Medina Capital Advisors, LLC offers private equity investment 
+          advisory services and specializes in the cybersecurity, data 
+          analytics, cloud computing, and IT infrastructure market segments. 
+          As an associate, I performed proactively in all matters arising in the 
+          ordinary course of investment management for this venture capital 
+          firm. Evaluated potential investment opportunities and provided 
+          operational support to the firm's portfolio companies.
+            - Supported M&A integration activities for a <b>$2.3 billion 
+            transaction</b> aggregating <b>600 employees</b> and <b>$800 
+            million+</b> in annual recurring revenue (ARR) by preparing a 
+            five-year P&L forecast for the combined entity and compiling 
+            industry/market research reports by analyzing competitors, clients, 
+            and opportunities.
+            - Sourced and conducted buy-side due diligence for a <b>$2.3 
+            billion</b> acquisition deal of <b>57 data center properties</b> 
+            from a Fortune 500 telecommunications company by extracting, 
+            transforming, and loading target company data to identify historical 
+            and projected financial and operating trends while conducting 
+            extensive valuation analyses using discounted cash flow (DCF), 
+            precedent transactions, and public market comparables along with 
+            creating client presentations and pitch books.
+            - Participated in the closing of a <b>$185 million fund</b> 
+            interacting with the firm's investors, clients, and limited partners 
+            (LPs) across all aspects of the fundraising process and delivering 
+            and calculating capital calls and distribution notices to investors.
+            - Contributed to a <b>$10 million follow-on investment</b> in an 
+            existing portfolio company by assisting the deal team with the 
+            creation of comprehensive investment analysis, performing complex 
+            ownership dilution and liquidation preference analysis, and updating 
+            the capitalization table that informed the pro forma ownership 
+            structure of the company following the transaction.
       - role: IT Director
         time: 2014 - 2015
         company: ACT Productions, Inc.
