Add Cyxtera experience to _data/data.yml

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -89,6 +89,48 @@ experiences:
             - Bullet point
             - Bullet point
       - role: Senior Software Engineer
+      - role: Product Manager
+        time: 2017 - 2019
+        company: "Cyxtera Technologies, Inc."
+        details: |
+          Developed a pricing model for Cyxtera's data center services and
+          colocation product. Led global cross-functional teams of <b>5‑8 
+          members</b>. Participated in hiring and onboarding product managers 
+          needed to grow talented and diverse teams. Negotiated vendor bids and 
+          managed project budgets in the range of <b>$1M+</b>.
+            - Grew revenue by <b>$3.3M in 6 months</b> by bringing the 
+            commercial side of an existing free offering to market: billing 
+            customers for mailroom usage and package storage at the company's 
+            60 data centers.
+            - Delivered <b>2% ($12M) improvement</b> to the gross margin by 
+            developing and implementing a global consolidation strategy that 
+            closed data centers in underperforming markets. Successfully 
+            relocated <b>80+ customers</b>.
+            - Directed <b>5</b> data center decommissioning projects that 
+            achieved a <b>$10M reduction</b> in annual costs. Managed the entire 
+            project lifecycle and delivered all projects on schedule and under
+            budget. 
+            - Led comprehensive analysis of contracts, service delivery, and 
+            billing that identified <b>$300K</b> of previously unbilled revenue 
+            and established revenue assurance process improvements to back bill 
+            customers.
+            - Created a metric-based reporting package for leadership to standardize 
+            capacity metrics across <b>60 data centers</b>. Established a 
+            monthly reporting process, delivered training to <b>50+ staff 
+            members</b>, and created a system of controls to eliminate errors. 
+            - Championed the development and implementation of a corporate-wide 
+            internship program. Managed <b>$150K annual budget</b>. Sourced and
+            hired <b>30+ candidates in the first 2 years</b> of the program. 
+            Came in <b>$85K</b> under budget.
+          <p><u>Led cross-functional teams, working with:</u></p>
+            - Sales team on opportunities that require product support.
+            - Operations and Engineering teams to ensure all data center 
+            buildout/restoration projects are on schedule.
+            - Legal team on contract negotiations with customers, partners, 
+            vendors, and landlords.
+            - Finance team for budget review and approval.
+            - Marketing team to create various customer-facing materials.
+            - Product Marketing team for go-to-market planning.
       - role: Private Equity Associate
         time: 2015 - 2017
         company: Medina Capital Advisors, LLC
