Add hyperlinks to Techmeme experience in _data/data.yml

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -207,19 +207,24 @@ experiences:
             models for generating personalized music playlists.
             - Rewrote API documentation; proofread content to correct writing 
             errors, eliminate redundant text and increase readability.
-      - role: Senior News Editor
-        time: 2010 - 2012
-        company: TechMeme.com
+      - role: <a href="https://web.archive.org/web/20120331162741/https://techmeme.com/about" target="_blank">Editorial Team</a>
+        time: 2010 - 2013
+        company: Techmeme.com
         details: |
-          Oversaw the selection of news and information at the core of Techmeme, 
-          a technology news aggregator. Leveraged a combination of industry 
-          contacts, specialist news sources, and Twitter feeds to bring together 
-          the most important tech news from around the web.
-            - Won prestigious <b>TechCrunch Crunchies Award</b> for &#x2018;Best 
-            Bootstrapped Startup&#x2019; (2012).
-            - Evaluated <b>200+</b> technology-related news stories daily. 
+          Oversaw the selection of news and information at the core of 
+          <a href="https://techmeme.com/" target="_blank">Techmeme.com</a>, a 
+          technology news website. Leveraged a combination of industry contacts, 
+          specialist news sources, and 
+          <a href="https://twitter.com/i/lists/1669050997732171806" 
+          target="_blank">Twitter feeds</a> to bring together the most important 
+          tech news from around the web.
+            - Won prestigious 
+            <a href="https://techcrunch.com/events/crunchies-2012/winners/" 
+            target="_blank"><b>TechCrunch Crunchies Award</b> for &#x2018;Best 
+            Bootstrapped Startup&#x2019;.
             - Attended and reported on <b>10+</b> tech industry trade shows 
             including RSA, TechCrunch Disrupt, and WSJ Tech Live.
+            - Evaluated <b>200+</b> technology-related news stories daily. 
             - Quickly identified, assessed and reacted to breaking news stories, 
             typically posting key stories within <b>minutes</b> of their 
             availability.
