Update Techmeme bullet point in _data/data.yml

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -223,7 +223,7 @@ experiences:
             target="_blank"><b>TechCrunch Crunchies Award</b> for &#x2018;Best 
             Bootstrapped Startup&#x2019;.
             - Attended and reported on <b>10+</b> tech industry trade shows 
-            including RSA, TechCrunch Disrupt, and WSJ Tech Live.
+            including RSA Conference, TechCrunch Disrupt, and WSJ Tech Live.
             - Evaluated <b>200+</b> technology-related news stories daily. 
             - Quickly identified, assessed and reacted to breaking news stories, 
             typically posting key stories within <b>minutes</b> of their 
