--- a/_data/data.yml
+++ b/_data/data.yml
@@ -167,27 +167,34 @@ experiences:
             the capitalization table that informed the pro forma ownership 
             structure of the company following the transaction.
       - role: IT Director
-        time: 2014 - 2015
+        time: 2015 - 2015
         company: ACT Productions, Inc.
         details: |
-          Managed the IT infrastructure for ACT Productions, an event production 
-          company located in Miami Beach, Florida. Coordinated technical aspects 
-          of web and social media strategy for clients, designing custom content 
-          and securing other special requests to appropriately meet client needs.
-          Managed the IT infrastructure for ACT Productions, an event production 
-          company located in Miami Beach, Florida, and coordinated technical 
-          aspects of web and social media strategy for clients, designing custom 
-          content for the web and securing other special requests to 
-          appropriately meet client needs.
+          Managed the IT infrastructure for <a href="https://www.actproductions.com/" 
+          target="_blank">ACT Productions</a>, a Miami Beach-based event 
+          production company. Coordinated technical aspects of web and social 
+          media strategy for clients, designing custom content and securing 
+          other special requests to appropriately meet client needs.
+            - Designed and developed the <a href="https://web.archive.org/web/20151126034412/https://miamibeach100.com/" 
+            target="_blank">City of Miami Beach's official website</a> honoring 
+            the <a href="https://www.businesswire.com/news/home/20150319006260/en/Miami-Beach-Turns-100-with-Centennial-Celebrations-Like-No-Other-Destination-in-the-World" 
+            target="_blank">city's 100 year anniversary</a>. (<a href="https://github.com/andre3k1/miamibeach100.com" 
+            target="_blank">Click here to view this project on 
+            <b>GitHub</b>.</a>)
+            - Coordinated <b>monthly meetings</b> with the Mayor of Miami 
+            Beach's staff to ensure work on the <a href="https://web.archive.org/web/20151126034412/https://miamibeach100.com/" 
+            target="_blank">MiamiBeach100.com website</a> complied with contract 
+            documents.
             - Created a website from concept to completion within aggressive 
-            <b>6-week time frame</b> for Miami Beach Polo World Cup project.
-            - Coordinated <b>monthly meetings</b> with Mayor of Miami Beach's 
-            staff to ensure work on Miami Beach Centennial website complied with 
-            contract documents.
+            <b>8-week time frame</b> for the <a href="https://www.miamipolocup.com/" 
+            target="_blank">Miami Beach Polo World Cup</a>. (<a href="https://github.com/andre3k1/miamipolo.com" 
+            target="_blank">Click here to view this project on 
+            <b>GitHub</b>.</a>)
             - Conferred with CEO and recommended cost-reduction programs that 
             saved the company <b>$500/month</b> on Amazon Web Services (AWS).
-            - Issued <b>weekly reports</b> to support marketing team by deploying 
-            analytic tools to collect empirical data about social media followers.
+            - Issued <b>weekly reports</b> to support marketing team by 
+            deploying analytic tools to collect empirical data about social 
+            media followers.
       - role: <a href="https://web.archive.org/web/20131026004459/http://corp.senzari.com/" target="_blank">Software Engineer</a>
         time: 2013 - 2015
         company: Senzari, Inc.
