Update ACT Productions experience in _data/data.yml

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -166,7 +166,7 @@ experiences:
             ownership dilution and liquidation preference analysis, and updating 
             the capitalization table that informed the pro forma ownership 
             structure of the company following the transaction.
-      - role: IT Director
+      - role: Software Engineer
         time: 2015 - 2015
         company: ACT Productions, Inc.
         details: |
@@ -175,14 +175,14 @@ experiences:
           production company. Coordinated technical aspects of web and social 
           media strategy for clients, designing custom content and securing 
           other special requests to appropriately meet client needs.
-            - Designed and developed the <a href="https://web.archive.org/web/20151126034412/https://miamibeach100.com/" 
+            - Designed and developed the <a href="https://archive.is/COe6W/image" 
             target="_blank">City of Miami Beach's official website</a> honoring 
-            the <a href="https://www.businesswire.com/news/home/20150319006260/en/Miami-Beach-Turns-100-with-Centennial-Celebrations-Like-No-Other-Destination-in-the-World" 
-            target="_blank">city's 100 year anniversary</a>. (<a href="https://github.com/andre3k1/miamibeach100.com" 
+            the <a href="https://archive.is/FmmIF" target="_blank">city's 
+            100th Anniversary Celebration</a>. (<a href="https://github.com/andre3k1/miamibeach100.com" 
             target="_blank">Click here to view this project on 
             <b>GitHub</b>.</a>)
             - Coordinated <b>monthly meetings</b> with the Mayor of Miami 
-            Beach's staff to ensure work on the <a href="https://web.archive.org/web/20151126034412/https://miamibeach100.com/" 
+            Beach's staff to ensure work on the <a href="https://archive.is/COe6W/image" 
             target="_blank">MiamiBeach100.com website</a> complied with contract 
             documents.
             - Created a website from concept to completion within aggressive 
