Update Medina Capital experience in _data/data.yml

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -143,17 +143,19 @@ experiences:
           investment management, evaluated potential investment opportunities, 
           and provided operational support to the firm's portfolio companies.
             - Sourced and conducted buy-side due diligence for a <a href="http://archive.today/rn0mJ" 
-            target="_blank"><b>$2.3 billion</b> acquisition deal of <b>57 data 
+            target="_blank"><b>$2.3 billion</b> acquisition of <b>57 data 
             center properties</b> from a Fortune 500 telecommunications 
             company</a>. (<a href="http://archive.today/rn0mJ" 
-            target="_blank">Click here to read about this deal.</a>)
+            target="_blank">Click here to read about it in the Wall Street 
+            Journal</a>).
             - Supported M&A integration activities for a <a href="https://archive.is/tryU1" 
             target="_blank"><b>$2.8 billion transaction</b> aggregating <b>1,100 
             employees</b> and serving 3,500+ customers</a> by preparing a 
             five-year P&L forecast for the combined entity and compiling 
             industry/market research reports by analyzing competitors, clients, 
-            and opportunities. (<a href="https://archive.is/tryU1" 
-            target="_blank">Click here to read about this deal.</a>)
+            and opportunities. (<a href="https://web.archive.org/web/20161107071835/http://www.medinacapital.com:80/press-releases/bc-partners-jv/" 
+            target="_blank">Click here to view the press release announcing this 
+            deal</a>).
             - Participated in the closing of a <a href="https://web.archive.org/web/20230615231059/https://aum13f.com/fund/medina-capital-fund-ii-llc" 
             target="_blank"><b>$165 million fund</b> (Medina Capital Fund 
             II)</a>, interacting with the firm's investors, clients, and limited 
