Update hyperlinks for Medina Capital experience in data.yml

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -146,8 +146,8 @@ experiences:
             target="_blank"><b>$2.3 billion</b> acquisition of <b>57 data 
             center properties</b> from a Fortune 500 telecommunications 
             company</a>. (<a href="http://archive.today/rn0mJ" 
-            target="_blank">Click here to read about it in the Wall Street 
-            Journal</a>).
+            target="_blank">Click here to read about it in the <b>Wall Street 
+            Journal</b></a>).
             - Supported M&A integration activities for a <a href="https://archive.is/tryU1" 
             target="_blank"><b>$2.8 billion transaction</b> aggregating <b>1,100 
             employees</b> and serving 3,500+ customers</a> by preparing a 
@@ -161,7 +161,9 @@ experiences:
             II)</a>, interacting with the firm's investors, clients, and limited 
             partners (LPs) across all aspects of the fundraising process, 
             calculating capital calls and delivering distribution notices to 
-            investors.
+            investors. (<a href="https://aum13f.com/fund/medina-capital-fund-ii-llc" 
+            target="_blank">Click here to <b>analyze the public filings</b> of 
+            Medina Capital Fund II LLC</a>).
             - Contributed to a <b>$10 million follow-on investment</b> in an 
             existing portfolio company by assisting the deal team with the 
             creation of comprehensive investment analysis, performing complex 
