Add hyperlinks to Cyxtera experience in data.yml

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -131,6 +131,24 @@ experiences:
             - Finance team for budget review and approval.
             - Marketing team to create various customer-facing materials.
             - Product Marketing team for go-to-market planning.
+          <p><b>DCF: The Cyxtera Vision: A Secure Global Data Center Platform (May 12, 2017)</b> </p>
+            - <a href="https://archive.is/m7iFk" target="_blank">Archive.is</a> 
+            - <a href="https://web.archive.org/web/20230618200155/https://www.datacenterfrontier.com/colo/article/11430778/the-cyxtera-vision-a-secure-global-data-center-platform" target="_blank">Archive.org</a>
+          <p><b>DCM Company profile: Cyxtera Technologies (Jan. 13, 2022)</b> </p>
+            - <a href="https://archive.is/tnKGk" target="_blank">Archive.is</a> 
+            - <a href="https://web.archive.org/web/20230129120405/https://datacentremagazine.com/data-centres/company-profile-cyxtera-technologies" target="_blank">Archive.org</a>
+          <p><b>DCD: CTL completes sale of its data center business, now called Cyxtera (May 2, 2017)</b> </p>
+            - <a href="https://archive.is/7G9HQ" target="_blank">Archive.is</a> 
+            - <a href="https://web.archive.org/web/20230618200547/https://www.datacenterdynamics.com/en/news/centurylink-completes-sale-of-its-data-center-business-now-called-cyxtera/" target="_blank">Archive.org</a>
+          <p><b>DCD: CTL to sell its data centers for $2.3bn (Nov. 4, 2016)</b> </p>
+            - <a href="https://archive.is/4FS0i" target="_blank">Archive.is</a> 
+            - <a href="https://web.archive.org/web/20201128232802/https://www.datacenterdynamics.com/en/news/centurylink-to-sell-its-data-centers-for-23bn/" target="_blank">Archive.org</a>
+          <p><b>LightReading: CTL Finalizes Data Center Sale (May 2, 2017)</b> </p>
+            - <a href="https://archive.is/UDim0" target="_blank">Archive.is</a> 
+            - <a href="https://web.archive.org/web/20230618205608/https://www.lightreading.com/data-center/data-center-infrastructure/centurylink-finalizes-data-center-sale/d/d-id/732453?" target="_blank">Archive.org</a>
+          <p><b>DCD: The telco data center sell-off (Jan. 2, 2020)</b> </p>
+            - <a href="https://archive.is/Oggqs" target="_blank">Archive.is</a> 
+            - <a href="https://web.archive.org/web/20230618200821/https://www.datacenterdynamics.com/en/analysis/telco-data-center-sell-/" target="_blank">Archive.org</a>
       - role: Private Equity Associate
         time: 2015 - 2017
         company: Medina Capital Advisors, LLC
