Update career profile summary in data.yaml

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -54,12 +54,13 @@ sidebar:
 career-profile:
     title: Career Profile
     summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-      Second paragraph if required.
+      I am a technology executive with extensive experience in product management, team management, product development, and contract
+      negotiations. I like engaging with customers, learning their pain points and challenges, and building solutions that will help 
+      their daily work. I love to lead cross-functional teams to conquer new heights! I aim to use my experience and skills to create 
+      innovative solutions that help organizations achieve their business goals. I am open to new opportunities. 
+      
+      __[Contact Me »](https://forms.gle/7qunLkWoPSmvzjmV9)__
+
 education:
     title: Education
     info:
